Create rest api interface with error processing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+news.url = https://newsapi.org/v2
+news.urlTop = /top-headlines
+news.urlEverything = /everything
+news.urlSources = /sources
+news.apiKey = 59fdbe104f284c48996b097481d72276
 
