--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,5 @@ news.urlTop = /top-headlines
 news.urlEverything = /everything
 news.urlSources = /sources
 news.apiKey = 59fdbe104f284c48996b097481d72276
+server.port=8081
 
