--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,6 @@ news.urlEverything = /everything
 news.urlSources = /sources
 news.apiKey = 59fdbe104f284c48996b097481d72276
 server.port=8081
+spring.servlet.multipart.max-file-size=50MB
+
 
