fixing packages and names

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:14-jdk-alpine
 MAINTAINER Kostrytsyn Oleg
-COPY target/Lab3-0.0.1-SNAPSHOT.jar Lab3.jar
-ENTRYPOINT ["java","-jar","/Lab3.jar"]
+COPY NewsApiProxy.jar NewsApiProxy.jar
+ENTRYPOINT ["java","-jar","/NewsApiProxy.jar"]
 EXPOSE 8081
