--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   app:
-    image: 'lab3'
+    image: 'NewsApiProxy'
     build:
       context: .
     container_name: app
