--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,9 @@
         <version>2.7.3</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.example</groupId>
-    <artifactId>Lab3</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>Lab3</name>
+    <groupId>ok.apps.newsapi</groupId>
+    <artifactId>NewsApiProxy</artifactId>
+    <name>NewsApiProxy</name>
     <description>News reader</description>
     <properties>
         <java.version>1.8</java.version>
